@@ -145,7 +145,6 @@ Suggested package updates
 	o boehm-gc-6.3alpha2
 	o bomberclone-0.11.2
 	o boost-1.31.0
-	o bvi-1.3.2
 	o calc-2.11.9.2
 	o centericq-4.9.10
 	o cervisia-2.1
