@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2001/04/19 11:01:00 agc Exp $
+$NetBSD: distinfo,v 1.3 2001/10/24 07:05:37 cjs Exp $
 
-SHA1 (bvi-1.3.0.src.tar.gz) = 4ed72d12f3f6eaf41722949f002a9492f5ee5052
-Size (bvi-1.3.0.src.tar.gz) = 147282 bytes
+SHA1 (bvi-1.3.2.src.tar.gz) = 0ff213ebb5cd0993c5d1f7c8d4172aaec709aac1
+Size (bvi-1.3.2.src.tar.gz) = 170444 bytes
